--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -40,7 +40,7 @@
         android:background="@drawable/background_card_border_black"
         android:fontFamily="@font/pacifico"
         android:gravity="center_horizontal|center_vertical"
-        android:text="@string/remote_ok"
+        android:text="@string/remote_jobs"
         android:textColor="@color/white_f2feff"
         android:textSize="48sp" />
 
