--- a/base/src/main/res/layout/item_search.xml
+++ b/base/src/main/res/layout/item_search.xml
@@ -8,10 +8,10 @@
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="0dp"
-        android:layout_marginEnd="@dimen/dimen_16dp"
         android:layout_marginStart="@dimen/dimen_16dp"
         android:layout_marginTop="@dimen/dimen_8dp"
+        android:layout_marginEnd="@dimen/dimen_16dp"
+        android:layout_marginBottom="0dp"
         android:backgroundTint="@color/colorAccent"
         android:elevation="@dimen/dimen_4dp"
         app:cardCornerRadius="@dimen/dimen_8dp"
@@ -25,7 +25,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/dimen_8dp"
-            android:fontFamily="@font/nunito_regular"
+            android:fontFamily="@font/sf_ui_text_regular"
             android:padding="@dimen/dimen_8dp"
             android:textAlignment="viewStart"
             android:textColor="@color/white_f2feff"
