--- a/home/src/main/res/layout/activity_splash.xml
+++ b/home/src/main/res/layout/activity_splash.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#000000"
-    tools:context=".view.home.SplashActivity">
+    tools:context=".view.SplashActivity">
 
     <!--<ImageView
         android:id="@+id/imageView"
