--- a/base/src/main/res/layout/item_search.xml
+++ b/base/src/main/res/layout/item_search.xml
@@ -5,16 +5,16 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <android.support.v7.widget.CardView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/dimen_16dp"
         android:layout_marginTop="@dimen/dimen_8dp"
         android:layout_marginEnd="@dimen/dimen_16dp"
         android:layout_marginBottom="0dp"
+        android:background="@drawable/background_card_border_white"
         android:backgroundTint="@color/colorAccent"
         android:elevation="@dimen/dimen_4dp"
-        app:cardCornerRadius="@dimen/dimen_8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -32,5 +32,5 @@
             android:textSize="@dimen/dimen_18sp"
             android:textStyle="bold"
             tools:text="Search Item" />
-    </android.support.v7.widget.CardView>
+    </LinearLayout>
 </android.support.constraint.ConstraintLayout>
