--- a/base/src/main/res/layout/item.xml
+++ b/base/src/main/res/layout/item.xml
@@ -18,7 +18,8 @@
         android:layout_marginEnd="0dp"
         android:layout_marginStart="0dp"
         android:layout_marginTop="0dp"
-        android:scaleType="centerCrop"
+        android:background="@drawable/background_card_border_black"
+        android:scaleType="centerInside"
         android:visibility="gone" />
 
     <ProgressBar
