--- a/base/src/main/res/layout/item.xml
+++ b/base/src/main/res/layout/item.xml
@@ -18,9 +18,10 @@
         android:layout_marginEnd="0dp"
         android:layout_marginStart="0dp"
         android:layout_marginTop="0dp"
+        android:src="@drawable/ic_logo_400x200"
         android:background="@drawable/background_card_border_black"
         android:scaleType="centerInside"
-        android:visibility="gone" />
+        android:visibility="visible" />
 
     <ProgressBar
         android:id="@+id/progressImage"
@@ -32,19 +33,6 @@
         android:layout_marginStart="0dp"
         android:layout_marginTop="0dp"
         android:visibility="gone" />
-
-    <TextView
-        android:id="@+id/textViewLogo"
-        android:layout_width="match_parent"
-        android:layout_height="150dp"
-        android:layout_marginTop="0dp"
-        android:background="@drawable/background_card_border_black"
-        android:fontFamily="@font/pacifico"
-        android:gravity="center_horizontal|center_vertical"
-        android:text="@string/remote_jobs"
-        android:textColor="@color/white_f2feff"
-        android:textSize="48sp" />
-
 
     <TextView
         android:id="@+id/textViewTitle"
