--- a/home/src/main/res/menu/menu_main.xml
+++ b/home/src/main/res/menu/menu_main.xml
@@ -10,6 +10,10 @@
         app:actionViewClass="android.support.v7.widget.SearchView" />
 
     <item
+        android:id="@+id/favorites"
+        android:title="@string/favorites"
+        app:showAsAction="never" />
+    <item
         android:id="@+id/donate"
         android:title="@string/donate"
         app:showAsAction="never" />
