--- a/base/src/main/res/menu/menu_detail.xml
+++ b/base/src/main/res/menu/menu_detail.xml
@@ -3,7 +3,7 @@
 
     <item
         android:id="@+id/menu_share"
-        app:actionProviderClass="android.support.v7.widget.ShareActionProvider"
+        app:actionProviderClass="androidx.appcompat.widget.ShareActionProvider"
         app:showAsAction="always"
         android:title="@string/share" />
 </menu>
