--- a/home/src/main/res/menu/menu_main.xml
+++ b/home/src/main/res/menu/menu_main.xml
@@ -7,7 +7,7 @@
         android:title="@android:string/search_go"
         android:icon="@drawable/abc_ic_search_api_material"
         app:showAsAction="ifRoom|collapseActionView"
-        app:actionViewClass="android.support.v7.widget.SearchView" />
+        app:actionViewClass="androidx.appcompat.widget.SearchView" />
 
     <item
         android:id="@+id/favorites"
