--- a/home/src/main/res/menu/menu_main_instant.xml
+++ b/home/src/main/res/menu/menu_main_instant.xml
@@ -6,7 +6,7 @@
         android:id="@+id/search"
         android:icon="@drawable/abc_ic_search_api_material"
         android:title="@android:string/search_go"
-        app:actionViewClass="android.support.v7.widget.SearchView"
+        app:actionViewClass="androidx.appcompat.widget.SearchView"
         app:showAsAction="ifRoom|collapseActionView" />
 
     <item
