--- a/base/src/main/res/layout/item.xml
+++ b/base/src/main/res/layout/item.xml
@@ -20,19 +20,7 @@
         android:layout_marginTop="0dp"
         android:src="@drawable/ic_logo_400x200"
         android:background="@drawable/background_card_border_black"
-        android:scaleType="centerInside"
-        android:visibility="visible" />
-
-    <ProgressBar
-        android:id="@+id/progressImage"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginBottom="0dp"
-        android:layout_marginEnd="0dp"
-        android:layout_marginStart="0dp"
-        android:layout_marginTop="0dp"
-        android:visibility="gone" />
+        android:scaleType="centerInside"/>
 
     <TextView
         android:id="@+id/textViewTitle"
